# ProjektFP

./: README.md
TEMP TESTING/: App.css  App.js  Main.hs  TeamsList.js  setupProxy.js
backend/: backend.cabal  stack.yaml
backend/src/: Main.hs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  Footer.js  Info.js  Navbar.js
