cabal-version:       2.2
name:                backend
version:             0.1.0.0
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md

executable backend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base           >=4.9   && <5,
      streamly       >=0.10.1,
      scotty         >=0.12,
      aeson          >=1.4,
      text           >=1.2,
      time           >=1.8,
      random         >=1.2
  ghc-options:         -Wall
